--- a/common/make.config
+++ b/common/make.config
@@ -106,7 +106,11 @@ NVML_LIB = -L$(NVIDIA_GDK_DIR)/usr/src/gdk/nvml/lib -lnvidia-ml
 # Bittware BmcLib, BITTWARE_SDK must be defined in bashrc, for power measurement on Bittware FPGA boards
 BITTWARE_INC = -I$(BITTWARE_SDK)/include -I$(BITTWARE_SDK)/include/resources
 BITTWARE_LIB = -L$(BITTWARE_SDK) -lbwhil -lbmclib
-BITTWARE_FLAGS = -fopenmp -DLINUX -DAOCL_BOARD_a10pl4_gx115es3
+BITTWARE_FLAGS = -fopenmp -DLINUX -DAOCL_BOARD_a10pl4_dd4gb_gx115es3
+ifeq ($(BOARD),a10pl4_dd4gb_gx115es3)
+	CFLAGS += $(BITTWARE_INC) $(BITTWARE_LIB) $(BITTWARE_FLAGS)
+	CXXFLAGS += $(BITTWARE_INC) $(BITTWARE_LIB) $(BITTWARE_FLAGS)
+endif
 
 ### OpenCL ###
 
