--- a/opencl/b+tree/Makefile
+++ b/opencl/b+tree/Makefile
@@ -6,7 +6,7 @@ CFLAGS += $(KERNEL_DIM)
 CXXFLAGS += $(KERNEL_DIM)
 
 ifdef ALTERA
-	ifdef HOSTONLY
+	ifdef HOST_ONLY
 		AOT_PROGRAMS = 
 	else
 		AOT_PROGRAMS = AOCX
